Atualiza projeto exportador simple factory para JDK 17 e refatora.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>